fuxed modle compatibility issies

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,33 +1,33 @@
 <RCC>
     <qresource prefix="/">
         <file>qtquickcontrols2.conf</file>
-        <file>asserts/dark/curtain_shadow_handle.png</file>
-        <file>asserts/dark/list.png</file>
-        <file>asserts/dark/list_selected.png</file>
-        <file>asserts/dark/top_curtain_drag.png</file>
-        <file>asserts/dark/top_curtain_drag_back.png</file>
-        <file>asserts/light/humidity.png</file>
-        <file>asserts/light/temperaturepng</file>
-        <file>asserts/com/icons8-temperature-100.png</file>
-        <file>asserts/com/icons8-temperature-100(1).png</file>
-        <file>asserts/com/ihumidity.png</file>
-        <file>asserts/com/ihumidity_e.png</file>
-        <file>asserts/com/temperature.png</file>
-        <file>asserts/com/warning.png</file>
-        <file>asserts/dark/menu.png</file>
-        <file>asserts/light/menu.png</file>
-        <file>asserts/com/adimage.png</file>
-        <file>asserts/com/camera-green.png</file>
-        <file>asserts/com/gallery.png</file>
-        <file>asserts/light/top_curtain_drag.png</file>
-        <file>asserts/light/top_curtain_drag_back.png</file>
-        <file>asserts/com/home.png</file>
-        <file>asserts/com/sensors.png</file>
-        <file>asserts/dark/back.png</file>
-        <file>asserts/light/back.png</file>
-        <file>asserts/com/image.png</file>
-        <file>asserts/com/upload.png</file>
-        <file>asserts/com/retake.png</file>
-        <file>asserts/com/cancel.png</file>
+        <file>assets/dark/curtain_shadow_handle.png</file>
+        <file>assets/dark/list.png</file>
+        <file>assets/dark/list_selected.png</file>
+        <file>assets/dark/top_curtain_drag.png</file>
+        <file>assets/dark/top_curtain_drag_back.png</file>
+        <file>assets/light/humidity.png</file>
+        <file>assets/light/temperaturepng</file>
+        <file>assets/com/icons8-temperature-100.png</file>
+        <file>assets/com/icons8-temperature-100(1).png</file>
+        <file>assets/com/ihumidity.png</file>
+        <file>assets/com/ihumidity_e.png</file>
+        <file>assets/com/temperature.png</file>
+        <file>assets/com/warning.png</file>
+        <file>assets/dark/menu.png</file>
+        <file>assets/light/menu.png</file>
+        <file>assets/com/adimage.png</file>
+        <file>assets/com/camera-green.png</file>
+        <file>assets/com/gallery.png</file>
+        <file>assets/light/top_curtain_drag.png</file>
+        <file>assets/light/top_curtain_drag_back.png</file>
+        <file>assets/com/home.png</file>
+        <file>assets/com/sensors.png</file>
+        <file>assets/dark/back.png</file>
+        <file>assets/light/back.png</file>
+        <file>assets/com/image.png</file>
+        <file>assets/com/upload.png</file>
+        <file>assets/com/retake.png</file>
+        <file>assets/com/cancel.png</file>
     </qresource>
 </RCC>
